--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <title>Contact US - Horiseon Incorporated</title>
+    <title>Horiseon Incorporated</title>
   </head>
 
   <body>
